 2003-09-27 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstreamconfig.h.windows: Update headers and defines
      to build latest code on MSVC
 2003-09-26 Al Riddoch <alriddoch@zepler.org>
    - Add option to get streams remote details as reverse lookup, rather
      than just presentation form.
 2003-09-26 Al Riddoch <alriddoch@zepler.org>
    - Write elaborate tests to pick up socket calls when building for windows.
    - ping/ping.cpp: Remove unused variable.
 2003-09-26 Al Riddoch <alriddoch@zepler.org>
    - Write some tests to pick up the socket and name resolver libs on
      System V.
    - Clean up handling of libs required to get socket calls in general.
    - ping/ping.cpp, skstream/skserver.cpp: Add missing stdio include.
    - skstream/skserver.h: Remove non-required string.h include.
    - skstream/skstream.cpp: Add mising stdio include, and clean up sprintf()
      usage.
 2003-09-26 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.cpp: Add code that handles converting service to
      presentation format in a protocol independant way.
 2003-09-26 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h: Add accessors for address size members.
    - ping/ping.cpp: Clean up use of libc and system calls.
    - skstream/skstream.cpp: Clean up handling socket address sizes
      when setting socket by descriptor in the buffer objects.
      Add code that handles converting address to presentation format
      in a protocol independant way.
 2003-09-25 Al Riddoch <alriddoch@zepler.org>
    - skstream/skpoll.cpp, skstream/skserver.cpp, skstream/skstream.cpp:
      Finish off fully qualifying all libc and system calls as being
      explicitly in the global namespace.
 2003-09-25 Al Riddoch <alriddoch@zepler.org>
    - Remove messy attempt to handle IPv6 addresses without getaddrinfo
 2003-09-25 James Turner <james@worldforge.org>
    - skstream/skstream.cpp: Fully qualify all libc and system calls as